# SarathiAgentInspect

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  master_prompt.txt  pyproject.toml
.agents/rules/: foundational-architecture-for-the-framework.md
.github/workflows/: ci.yml  nightly.yml  regression.yml  smoke.yml
ci/: regression_gate.py
configs/: ci.yaml  default.yaml  local.yaml  production.yaml
docker/: Dockerfile  docker-compose.yml
docs/: langfuse-self-hosted-guide.md
src/sarathi_agent_inspect/: __init__.py
src/sarathi_agent_inspect/core/: __init__.py  concurrency.py  governance.py  observability.py  sanitizer.py  types.py
src/sarathi_agent_inspect/core/config/: __init__.py  constants.py  loader.py  settings.py
src/sarathi_agent_inspect/core/exceptions/: __init__.py  base.py
src/sarathi_agent_inspect/core/logging/: __init__.py  logger.py
src/sarathi_agent_inspect/core/retry/: __init__.py  strategy.py
src/sarathi_agent_inspect/datasets/: __init__.py  base.py  cache.py  pipeline.py  regression.py  schemas.py  synthetic.py
src/sarathi_agent_inspect/datasets/loaders/: __init__.py  csv_loader.py  json_loader.py  parquet_loader.py  trace_loader.py
src/sarathi_agent_inspect/evaluators/: __init__.py  base.py
src/sarathi_agent_inspect/evaluators/agent/: __init__.py  governance.py  memory.py  reasoning.py  tools.py  trace.py  workflow.py
src/sarathi_agent_inspect/evaluators/rag/: __init__.py  adversarial.py  chunking.py  citations.py  embeddings.py  pipelines.py  tracing.py
src/sarathi_agent_inspect/metrics/: __init__.py  base.py  composite.py  config.py  deepeval_adapter.py  deepeval_wrappers.py  execution.py  observability.py  registry.py  sdk.py
src/sarathi_agent_inspect/providers/: __init__.py  anthropic_provider.py  base.py  cost.py  gemini.py  judge.py  ollama.py  openai_provider.py  registry.py  tokens.py
src/sarathi_agent_inspect/reporting/: allure_adapter.py  base.py  dashboard.py  github_actions.py  history.py  html_reporter.py  json_reporter.py  notifications.py  notifications_registry.py
src/sarathi_agent_inspect/reporting/templates/: dashboard_template.html  report_template.html
tests/: conftest.py
tests/fixtures/: __init__.py  common.py
tests/integration/: test_ollama_live.py
tests/unit/: test_regression_gate.py
tests/unit/core/: test_concurrency.py  test_config.py  test_exceptions.py  test_governance.py  test_hardening.py  test_logging.py  test_retry.py
tests/unit/datasets/: __init__.py  test_cache.py  test_loaders.py  test_pipeline.py  test_regression.py  test_schemas.py  test_synthetic.py
tests/unit/evaluators/agent/: test_agent.py
tests/unit/evaluators/rag/: __init__.py  test_rag.py
tests/unit/metrics/: test_metrics.py
tests/unit/providers/: test_cost.py  test_gemini.py  test_ollama.py  test_openai_provider.py  test_registry.py  test_tokens.py
tests/unit/reporting/: test_reporters.py
