[project]
name = "sarathi-agent-inspect"
version = "0.1.0"
description = "Enterprise-grade AI Evaluation Framework for LLM, Chatbot, Agent, and RAG testing"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "VaibhaV Arde" }]
keywords = ["ai", "evaluation", "llm", "testing", "deepeval", "quality-engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "structlog>=24.0",
    "tenacity>=9.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "deepeval>=2.0",
    "anthropic>=0.100.0",
    "google-genai>=1.75.0",
    "httpx>=0.28.1",
    "openai>=2.35.1",
    "polars>=1.5.0",
    "pyarrow>=17.0.0",
    "dvc>=3.55.0",
    "jinja2>=3.1.6",
    "allure-pytest>=2.16.0",
    "pytest-xdist>=3.5.0",
    "pytest-rerunfailures>=13.0",
    "slack-sdk>=3.41.0",
]

[project.optional-dependencies]
langfuse = ["langfuse>=2.0"]
opentelemetry = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-xdist>=3.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "black>=24.0",
    "types-PyYAML>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sarathi_agent_inspect"]

# ──────────────────────────────────────────────
# Ruff Configuration
# ──────────────────────────────────────────────
[tool.ruff]
target-version = "py313"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
    "S",    # flake8-bandit (security)
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "T20",  # flake8-print
    "PT",   # flake8-pytest-style
    "ERA",  # eradicate (commented-out code)
    "LOG",  # flake8-logging
    "ASYNC",# flake8-async
]
ignore = [
    "S101",   # Allow assert in tests
    "B008",   # Allow function calls in defaults (Pydantic)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106", "T20"]

[tool.ruff.lint.isort]
known-first-party = ["sarathi_agent_inspect"]

# ──────────────────────────────────────────────
# Black Configuration
# ──────────────────────────────────────────────
[tool.black]
line-length = 120
target-version = ["py313"]

# ──────────────────────────────────────────────
# Mypy Configuration
# ──────────────────────────────────────────────
[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "deepeval.*",
    "langfuse.*",
]
ignore_missing_imports = true

# ──────────────────────────────────────────────
# Pytest Configuration
# ──────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests (fast, no external deps)",
    "integration: Integration tests (may need external services)",
    "slow: Slow tests (LLM calls, large datasets)",
    "smoke: Smoke tests (quick sanity checks)",
]
asyncio_mode = "auto"
addopts = [
    "-v",
    "-n", "auto",
    "--reruns", "2",
    "--reruns-delay", "1",
    "--strict-markers",
    "--tb=short",
    "-m", "not integration and not slow",
]

# ──────────────────────────────────────────────
# Coverage Configuration
# ──────────────────────────────────────────────
[tool.coverage.run]
source = ["src/sarathi_agent_inspect"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@abstractmethod",
    "raise NotImplementedError",
    "pass",
    "\\.\\.\\.",
]
